--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,6 @@
     android:padding="0dp">
 
 
-
-
-
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -33,16 +30,6 @@
             android:layout_alignWithParentIfMissing="false"
             android:layout_alignParentTop="true"
             android:layout_alignBottom="@+id/FLayout" />
-
-        <ImageView
-            android:layout_width="113dp"
-            android:layout_height="113dp"
-            android:id="@+id/weatherIcon"
-            android:layout_gravity="bottom|right"
-            android:layout_weight="0.13"
-            android:layout_margin="25dp"
-            android:background="@drawable/simple_weather"
-            android:scaleType="matrix" />
 
     </FrameLayout>
 
@@ -65,7 +52,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="miasto"
+            android:text="[city]"
             android:id="@+id/gpscity"
             android:textColor="#ffffffff"
             android:textSize="20dp"
@@ -77,12 +64,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="00:00"
+            android:text="[00:00]"
             android:id="@+id/time"
             android:layout_gravity="center_horizontal"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:textColor="#ffffffff" />
 
         <ImageView
@@ -108,44 +95,51 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp" />
 
-    </FrameLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal|top"
-        android:gravity="left|bottom"
-        android:padding="10dp"
-        android:nestedScrollingEnabled="false"
-        android:weightSum="1"
-        android:background="#715f5f5f">
-
-        <TextView
-            android:layout_width="156dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
-            android:id="@+id/description"
-            android:textColor="#ffffffff"
-            android:textSize="20dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="[temp]"
-            android:id="@+id/temp"
-            android:textColor="#ffffffff"
-            android:textSize="65dp"
-            android:layout_row="0"
-            android:layout_column="0"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal|top"
             android:gravity="left|bottom"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textStyle="normal" />
+            android:padding="0dp"
+            android:nestedScrollingEnabled="false"
+            android:weightSum="1"
+            android:background="#00ff6300"
+            android:layout_marginTop="60dp">
 
-    </LinearLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="[temp]"
+                android:id="@+id/temp"
+                android:textColor="#ffffffff"
+                android:textSize="65dp"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:gravity="left|bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:textStyle="normal"
+                android:layout_marginLeft="10dp" />
+
+            <TextView
+                android:layout_width="204dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="[conditions]"
+                android:id="@+id/description"
+                android:textColor="#ffffffff"
+                android:textSize="20dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginBottom="10dp" />
+
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </RelativeLayout>
