--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,55 +91,34 @@
             android:background="@drawable/refresh"
             android:layout_weight="0.03"
             android:alpha="0.5"
-            android:layout_gravity="top|right"
+            android:layout_gravity="right|top"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal|top"
-            android:gravity="left|bottom"
-            android:padding="0dp"
-            android:nestedScrollingEnabled="false"
-            android:weightSum="1"
-            android:background="#00ff6300"
-            android:layout_marginTop="60dp">
-
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="[temp]"
-                android:id="@+id/temp"
-                android:textColor="#ffffffff"
-                android:textSize="65dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:gravity="left|bottom"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:textStyle="normal"
-                android:layout_marginLeft="10dp" />
-
-            <TextView
-                android:layout_width="204dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="[conditions]"
-                android:id="@+id/description"
-                android:textColor="#ffffffff"
-                android:textSize="20dp"
-                android:layout_marginLeft="13dp"
-                android:layout_marginBottom="10dp" />
-
-
-        </LinearLayout>
-
     </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal|top"
+        android:gravity="left|bottom"
+        android:padding="0dp"
+        android:nestedScrollingEnabled="false"
+        android:weightSum="1"
+        android:background="#00ff6300"
+        android:layout_marginTop="60dp"
+        android:id="@+id/linearLayout">
+
+
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="494dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
+
+    </LinearLayout>
 
 </RelativeLayout>
