--- a/app/src/main/res/layout/basic_weather.xml
+++ b/app/src/main/res/layout/basic_weather.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:tag="frag1"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -8,8 +10,20 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="[temp]"
         android:id="@+id/temp"
+        android:textSize="65dp"
+        android:textColor="#ffffffff"
+        android:layout_above="@+id/description"
+        android:layout_alignStart="@+id/description" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="[description]"
+        android:id="@+id/description"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:textSize="65dp"
-        android:textColor="#ffffffff" />
+        android:textColor="#ffffffff"
+        android:textSize="25dp"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
