--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="35dp"
-            android:textColor="#ffffffff" />
+            android:textColor="#ffffffff"
+            android:textSize="17dp" />
 
         <ImageView
             android:layout_width="wrap_content"
