--- a/app/src/main/res/layout/details_weather.xml
+++ b/app/src/main/res/layout/details_weather.xml
@@ -9,65 +9,189 @@
         android:layout_height="fill_parent"
         android:id="@+id/scrollView" >
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#64000000">
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="22dp"
-                android:id="@+id/imageView2"
-                android:src="@drawable/temp_min_ico"
-                android:layout_marginStart="66dp"
-                android:layout_centerVertical="true"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#64000000"
+                android:layout_marginBottom="10dp"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView2"
+                    android:src="@drawable/temp_min_ico"
+                    android:layout_marginStart="66dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="000"
+                    android:id="@+id/minTemp"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignTop="@+id/maxTemp"
+                    android:layout_toEndOf="@+id/imageView2"
+                    android:layout_centerVertical="true" />
+
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView"
+                    android:src="@drawable/temp_max_ico"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignTop="@+id/maxTemp"
+                    android:layout_toStartOf="@+id/maxTemp"
+                    android:layout_centerVertical="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="[00:00]"
+                    android:id="@+id/maxTemp"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginEnd="57dp"
+                    android:layout_alignTop="@+id/imageView2"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="false"
+                    android:layout_centerVertical="true" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="#64000000"
+                android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView4"
+                    android:layout_alignBottom="@+id/hum"
+                    android:layout_alignParentStart="true"
+                    android:src="@drawable/pressure_icon"
+                    android:layout_marginLeft="44dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="1000 hPa"
+                    android:id="@+id/press"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_alignTop="@+id/imageView3"
+                    android:layout_toEndOf="@+id/imageView4"
+                    android:layout_centerVertical="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="99%"
+                    android:id="@+id/hum"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="45dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/imageView3"
+                    android:layout_marginStart="14dp" />
+
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView3"
+                    android:src="@drawable/humidity_icon"
+                    android:layout_alignTop="@+id/imageView4"
+                    android:layout_toEndOf="@+id/press"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginRight="2dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#64000000"
+                android:padding="10dp"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="10dp" />
+                android:layout_marginBottom="10dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="[00:00]"
-                android:id="@+id/minTemp"
-                android:textColor="#ffffffff"
-                android:textSize="17dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_alignTop="@+id/maxTemp"
-                android:layout_toEndOf="@+id/imageView2"
-                android:layout_centerVertical="true" />
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView5"
+                    android:src="@drawable/sunset_icon"
+                    android:layout_marginStart="66dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="44dp" />
 
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="22dp"
-                android:id="@+id/imageView"
-                android:src="@drawable/temp_max_ico"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_alignTop="@+id/maxTemp"
-                android:layout_toStartOf="@+id/maxTemp"
-                android:layout_centerVertical="true" />
+                <ImageView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/imageView6"
+                    android:src="@drawable/sunrise_icon"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toStartOf="@+id/sunrise" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="[00:00]"
-                android:id="@+id/maxTemp"
-                android:textColor="#ffffffff"
-                android:textSize="17dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginEnd="57dp"
-                android:layout_alignTop="@+id/imageView2"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="false"
-                android:layout_centerVertical="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="00:00"
+                    android:id="@+id/sunset"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignTop="@+id/sunrise"
+                    android:layout_toEndOf="@+id/imageView5"
+                    android:layout_marginStart="18dp" />
 
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="00:00"
+                    android:id="@+id/sunrise"
+                    android:textColor="#ffffffff"
+                    android:textSize="17dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginEnd="42dp"
+                    android:layout_alignTop="@+id/imageView6"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
