--- a/app/src/main/res/layout/details_weather.xml
+++ b/app/src/main/res/layout/details_weather.xml
@@ -261,9 +261,17 @@
 
 
                 -->
+            <fragment
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                class="com.google.android.gms.maps.SupportMapFragment" />
+            <!-- android:name="com.google.android.gms.maps.SupportMapFragment" -->
+            />
 
-        </RelativeLayout>
 
-    </LinearLayout>
+     </RelativeLayout>
+
+ </LinearLayout>
 
 </RelativeLayout>
