--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar.TranslucentDecor">
+        <item name="android:windowBackground">@drawable/splash</item>
         <!-- Customize your theme here. -->
     </style>
 
