--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar.TranslucentDecor">
-        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/splash3</item>
     </style>
 
 </resources>
